2014-08-02  Jeremy Jones  <jeremyj@apple.com>

        Support both window and view based video fullscreen.
        https://bugs.webkit.org/show_bug.cgi?id=135525

        Reviewed by Simon Fraser.

        Parenting in the view instead of the window gives the fullscreen implementation more latitude 
        in how it implements the animation.

        * WebView/WebView.mm:
        (-[WebView _enterFullscreenForNode:]): Use view instead of window.

2014-08-01  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/17891752> [iOS] WebKit links against libraries it doesn’t use
        https://bugs.webkit.org/show_bug.cgi?id=135536

        Reviewed by Tim Horton.

        * Configurations/WebKitLegacy.xcconfig: Removed -framework MobileAsset from
        OTHER_LDFLAGS_iphoneos.

2014-07-30  Andy Estes  <aestes@apple.com>

        USE(CONTENT_FILTERING) should be ENABLE(CONTENT_FILTERING)
        https://bugs.webkit.org/show_bug.cgi?id=135439

        Reviewed by Tim Horton.

        We now support two different platform content filters, and will soon support a mock content filter (as part of
        webkit.org/b/128858). This makes content filtering a feature of WebKit, not just an adoption of a third-party
        library. ENABLE() is the correct macro to use for such a feature.

        * Configurations/FeatureDefines.xcconfig:

2014-07-30  Andreas Kling  <akling@apple.com>

        Static hash tables no longer need to be coupled with a VM.
        <https://webkit.org/b/135421>

        Reviewed by Geoffrey Garen.

        * Plugins/Hosted/ProxyInstance.mm:
        * Plugins/Hosted/ProxyRuntimeObject.mm:

2014-07-30  Dan Bernstein  <mitz@apple.com>

        Updated for changes to the WebCore::Credential API.
        Work towards fixing https://bugs.webkit.org/show_bug.cgi?id=135327

        Reviewed by Alexey Proskuryakov.

        * Misc/WebDownload.mm:
        (-[WebDownloadInternal download:didReceiveAuthenticationChallenge:]): Use new nsCredential