@@ -1,3 +1,14 @@
+2014-08-04  Benjamin Poulain  <bpoulain@apple.com>
+
+        Check for null frame when processing geolocation authorization request
+        https://bugs.webkit.org/show_bug.cgi?id=135577
+        <rdar://problem/17896295>
+
+        Reviewed by Geoffrey Garen.
+
+        * WebCoreSupport/WebGeolocationClient.mm:
+        (WebGeolocationClient::requestPermission):
+
 2014-08-02  Jeremy Jones  <jeremyj@apple.com>
 
         Support both window and view based video fullscreen.
